--- a/configure.in
+++ b/configure.in
@@ -256,6 +256,7 @@ dnl find libxslt
 dnl ==========================================================================
 XMLSEC_NO_LIBXSLT="1"
 LIBXSLT_MIN_VERSION=1.0.20
+LIBXSLT_PC_FILE_COND="libxslt >= $LIBXSLT_MIN_VERSION"
 LIBXSLT_CONFIG="xslt-config"
 LIBXSLT_CFLAGS=""
 LIBXSLT_LIBS=""
@@ -324,6 +325,8 @@ fi
 if test "z$LIBXSLT_FOUND" = "zyes" ; then
     XMLSEC_NO_LIBXSLT="0"
 else
+    LIBXSLT_PC_FILE_COND=""
+    LIBXSLT_MIN_VERSION=""
     XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_NO_XSLT=1"
 fi
 
@@ -332,6 +335,7 @@ AC_SUBST(LIBXSLT_CFLAGS)
 AC_SUBST(LIBXSLT_LIBS)
 AC_SUBST(LIBXSLT_CONFIG)
 AC_SUBST(LIBXSLT_MIN_VERSION)
+AC_SUBST(LIBXSLT_PC_FILE_COND)
 
 dnl ==========================================================================
 dnl See if we can find a crypto library
