--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,26 +38,31 @@ environment:
       CRYPTO: mscrypto
       STATIC: no
       UNICODE: yes
+      WERROR: no
 
     - COMPILER: MSVC17
       CRYPTO: mscng
       STATIC: no
       UNICODE: yes
+      WERROR: yes
 
     - COMPILER: MSVC17
       CRYPTO: openssl
       STATIC: no
       UNICODE: yes
+      WERROR: no
 
     - COMPILER: MSVC17
       CRYPTO: mscrypto
       STATIC: no
       UNICODE: no
+      WERROR: no
 
     - COMPILER: MSVC17
       CRYPTO: mscng
       STATIC: no
       UNICODE: no
+      WERROR: yes
 
     - COMPILER: MinGW-w64
       STATIC: no
@@ -91,7 +96,7 @@ build_script:
   - if [%COMPILER%]==[MinGW-w64] bash ../autogen.sh --build="x86_64-w64-mingw32" --host="x86_64-w64-mingw32" --enable-unicode=$UNICODE --enable-mscrypto --enable-mscng --enable-openssl --enable-gnutls --enable-static-linking=$STATIC
   - if [%COMPILER%]==[MinGW-w64] make
   - if [%COMPILER%]==[MSVC17] cd win32
-  - if [%COMPILER%]==[MSVC17] cscript configure.js static=%STATIC% crypto=%CRYPTO% iconv=no unicode=%UNICODE% prefix=%EXTRAS_FOLDER% include=%EXTRAS_FOLDER%\include;%EXTRAS_FOLDER%\include\libxml2;%MSSDK_INCLUDE% lib=%EXTRAS_FOLDER%\bin;%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
+  - if [%COMPILER%]==[MSVC17] cscript configure.js static=%STATIC% crypto=%CRYPTO% werror=%WERROR% iconv=no unicode=%UNICODE% prefix=%EXTRAS_FOLDER% include=%EXTRAS_FOLDER%\include;%EXTRAS_FOLDER%\include\libxml2;%MSSDK_INCLUDE% lib=%EXTRAS_FOLDER%\bin;%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
   - if [%COMPILER%]==[MSVC17] nmake
  
 test_script:
