win32: allow custom compiler flags
Use-case is e.g. wanting to build the code with -arch:SSE. And this improves
consistency, autotools allows custom compiler flags as well.

--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -352,7 +352,7 @@ CPPFLAGS 		= /nologo
 #
 # The compiler and its options.
 #
-CFLAGS 			= /nologo /D "WIN32" /D "_WINDOWS" /D inline=__inline
+CFLAGS 			= $(CFLAGS) /nologo /D "WIN32" /D "_WINDOWS" /D inline=__inline
 # C4130: '!=': logical operation on address of string constant:
 #     this generates a false warning inside macros
 # C4127: conditional expression is constant
