--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -16,7 +16,7 @@ XMLSEC1_MAN=$(top_builddir)/man/xmlsec1.1
 XMLSEC_HTML=$(builddir)/xmlsec-man.html
 
 all:
-	@echo "======= Run 'nake docs' in the xmlsec/docs folder to rebuild docs" 
+	@echo "======= Run 'make docs' in the xmlsec/docs folder to rebuild docs"
 
 # docs is legacy
 docs: docs-copy man-docs docs-format
