--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,28 @@ language: c
 sudo: required
 dist: trusty
 install:
-- sudo apt-get update
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update; fi
+- if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew update; fi
 # install build tools
-- sudo apt-get install automake autoconf libtool
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install automake autoconf libtool; fi
+- if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install libtool pkg-config; fi
 # install libxml2/libxslt libraries
-- sudo apt-get install libxml2 libxml2-dev libxslt1.1 libxslt1-dev
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libxml2 libxml2-dev libxslt1.1 libxslt1-dev; fi
 # install openssl libraries
-- sudo apt-get install libssl1.0.0 libssl-dev
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libssl1.0.0 libssl-dev; fi
 # install nspr/nss libraries
-- sudo apt-get install libnspr4 libnspr4-dev libnss3 libnss3-dev libnss3-tools
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libnspr4 libnspr4-dev libnss3 libnss3-dev libnss3-tools; fi
+- if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install nss; fi
 # install gcrypt libraries
-- sudo apt-get install libgcrypt11 libgcrypt11-dev
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libgcrypt11 libgcrypt11-dev; fi
 # install gnutls libraries
-- sudo apt-get install libgnutls28 libgnutls-dev
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libgnutls28 libgnutls-dev; fi
 script:
-- mkdir build && cd build && ../autogen.sh --enable-werror && make && make check
+- . scripts/travis-env.sh && mkdir build && cd build && ../autogen.sh --enable-werror && make && make check
+matrix:
+  include:
+  - name: "linux"
+    os: linux
+  - name: "osx"
+    os: osx
+    osx_image: xcode9.3
