--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
 - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libxml2 libxml2-dev libxslt1.1 libxslt1-dev; fi
 # install openssl libraries
 - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libssl1.0.0 libssl-dev; fi
+- if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install openssl; fi
 # install nspr/nss libraries
 - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libnspr4 libnspr4-dev libnss3 libnss3-dev libnss3-tools; fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install nss; fi
