build: add --enable-mans configuration options
Add --enable-mans to install man pages, while --enable-docs installs the
remaining documentation.

This is useful for minimal documentation installation in distributions in
which the additional documentation requires explicit option.

Signed-off-by: Alon Bar-Lev <alon.barlev@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,8 +5,11 @@ SUBDIRS 	    = include src
 if XMLSEC_APPS
 SUBDIRS += apps
 endif
+if XMLSEC_MANS
+SUBDIRS += man
+endif
 if XMLSEC_DOCS
-SUBDIRS += man docs
+SUBDIRS += docs
 endif
 TEST_APP 	    = apps/xmlsec1$(EXEEXT)
 DEFAULT_CRYPTO	= @XMLSEC_DEFAULT_CRYPTO@
