--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
       sudo apt-get install automake autoconf libtool; 
     fi;
   fi
-- if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install libtool pkg-config; fi
+- if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install libtool; fi
 # install libxml2/libxslt libraries
 - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libxml2 libxml2-dev libxslt1.1 libxslt1-dev; fi
 # install openssl libraries
