--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,58 @@
 language: c
 sudo: required
 install:
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update; fi
-- if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew update; fi
-# install build tools
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
-    if [ "$TRAVIS_ARCH" = "s390x" ]; then 
-      sudo apt-get install automake autoconf libtool libtool-bin libltdl-dev libltdl7; 
-    else 
-      sudo apt-get install automake autoconf libtool; 
-    fi;
-  fi
-- if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install libtool; fi
-# install libxml2/libxslt libraries
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libxml2 libxml2-dev libxslt1.1 libxslt1-dev; fi
-# install openssl libraries
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libssl1.0.0 libssl-dev; fi
-- if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install openssl; fi
-# install nspr/nss libraries
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libnspr4 libnspr4-dev libnss3 libnss3-dev libnss3-tools; fi
-- if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install nss; fi
-# install gcrypt libraries
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
-    if [ "$TRAVIS_ARCH" = "s390x" ]; then 
-      sudo apt-get install libgcrypt20 libgcrypt20-dev; 
-    else 
-      sudo apt-get install libgcrypt11 libgcrypt11-dev; 
-    fi;
-  fi
-# install gnutls libraries
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
-    if [ "$TRAVIS_ARCH" = "s390x" ]; then
-      sudo apt-get install libgnutls-dev; 
-    else 
-      sudo apt-get install libgnutls28 libgnutls-dev; 
-    fi;
-  fi  
+- case "${TRAVIS_OS_NAME}" in
+    "linux")
+        sudo apt-get update;
+
+        # install build tools
+        sudo apt-get install automake autoconf libtool;
+        if [ "$TRAVIS_ARCH" = "s390x" ]; then
+            sudo apt-get install libtool-bin libltdl-dev libltdl7;
+        fi;
+
+        # install libxml2/libxslt libraries
+        sudo apt-get install libxml2 libxml2-dev libxslt1.1 libxslt1-dev;
+
+        # install openssl libraries
+        sudo apt-get install libssl1.0.0 libssl-dev;
+
+        # install nspr/nss libraries
+        sudo apt-get install libnspr4 libnspr4-dev libnss3 libnss3-dev libnss3-tools;
+
+        # install gcrypt libraries
+        sudo apt-get install libgcrypt20 libgcrypt20-dev;
+
+        # install gnutls libraries
+        sudo apt-get install libgnutls-dev;
+    ;;
+    "osx")
+        brew update;
+
+        # install build tools
+        brew install libtool;
+
+        # install libxml2/libxslt libraries
+        # skip
+
+        # install openssl libraries
+        brew install openssl;
+
+        # install nspr/nss libraries
+        brew install nss;
+
+        # install gcrypt libraries
+        brew install libgcrypt
+
+        # install gnutls libraries
+        brew install gnutls
+    ;;
+    *)
+        # do nothing and hope for the best
+        echo "Unknown OS name '${TRAVIS_OS_NAME}', this is likely not going to work"
+    ;;
+  esac
+
 script:
 - . scripts/travis-env.sh && mkdir build && cd build && ../autogen.sh --enable-werror && make && make check
 matrix:
